# signet_io_uring

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_ws.cpp
cmake/: signet_io_uringConfig.cmake.in
docs/: COMPARISON.md  EDGE_CASES.md  SECURITY_AUDIT.md
examples/: CMakeLists.txt  basic_benchmark.cpp
include/signet/: signet.hpp
include/signet/core/: benchmark.hpp  buffer_pool.hpp  clock.hpp  config.hpp  error.hpp  histogram.hpp  metrics.hpp  ring.hpp  types.hpp
include/signet/net/: address.hpp  connection.hpp  resolver.hpp  socket.hpp
include/signet/tls/: ktls.hpp  tls_connection.hpp  tls_context.hpp
include/signet/ws/: ws_client.hpp  ws_connection.hpp  ws_deflate.hpp  ws_extension.hpp  ws_frame.hpp  ws_handshake.hpp  ws_types.hpp  ws_validator.hpp
tests/: CMakeLists.txt
tests/autobahn/: autobahn_client.cpp  fuzzingserver.json  run_autobahn.sh
tests/unit/: test_address.cpp  test_buffer_pool.cpp  test_clock.cpp  test_histogram.cpp  test_metrics.cpp  test_resolver.cpp  test_ring.cpp  test_socket.cpp  test_tls.cpp  test_ws.cpp  test_ws_client.cpp  test_ws_edge_cases.cpp  test_ws_extensions.cpp
